--- a/.github/workflows/run_indradia.yml
+++ b/.github/workflows/run_indradia.yml
@@ -1,7 +1,7 @@
 name: Run indradia.py manually
 
 on:
-  workflow_dispatch:  # enables manual runs
+  workflow_dispatch:  # this is required for manual runs
 
 jobs:
   run-script:
