--- a/.github/workflows/run_indradia.yml
+++ b/.github/workflows/run_indradia.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt || echo "No requirements.txt found. Skipping."
-
+           pip install pandas_ta yfinance vaderSentiment transformers torch feedparser
+           
       - name: Run the script
         run: python indradia.py
