--- a/.github/workflows/run_indradia.yml
+++ b/.github/workflows/run_indradia.yml
@@ -1,24 +1,40 @@
-name: Run indradia.py manually
+name: Run Colab Notebook Daily
 
+# Trigger: daily at 7 AM UTC and manual runs
 on:
-  workflow_dispatch:  # this is required for manual runs
+  schedule:
+    - cron: '0 7 * * *'  # every day at 07:00 UTC
+  workflow_dispatch:
 
 jobs:
-  run-script:
+  run-notebook:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      # Step 1: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
+      # Step 3: Install dependencies including nbconvert
       - name: Install dependencies
         run: |
-           pip install pandas_ta yfinance vaderSentiment transformers torch feedparser
-           
+          pip install nbconvert pandas_ta yfinance vaderSentiment transformers torch feedparser
+
+      # Step 4: Convert notebook to Python script
+      - name: Convert notebook to script
+        run: |
+          jupyter nbconvert --to script indradia.ipynb --output indradia.py
+
+      # Step 5: Debug: show first 5 lines to confirm latest version
+      - name: Show first 5 lines
+        run: head -n 5 indradia.py
+
+      # Step 6: Run the generated Python script
       - name: Run the script
-        run: python intraday/indradia.py
+        run: python indradia.py
