--- a/.github/workflows/run_indradia.yml
+++ b/.github/workflows/run_indradia.yml
@@ -24,7 +24,8 @@ jobs:
       # Step 3: Install dependencies including nbconvert
       - name: Install dependencies
         run: |
-          pip install nbconvert pandas_ta yfinance vaderSentiment transformers torch feedparser
+          pip install git+https://github.com/twopirllc/pandas-ta.git
+          pip install nbconvert yfinance vaderSentiment transformers torch feedparser
 
       # Step 4: Convert notebook to Python script
       - name: Convert notebook to script
