--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install ta jupyter
+          pip install ta jupyter nltk
           pip install nbconvert yfinance vaderSentiment transformers torch feedparser
 
       # Step 5: Convert notebook to Python script
