--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -58,4 +58,8 @@ jobs:
           git config --local user.name "GitHub Actions Bot"
           git add *_datos.txt
           git diff --cached --quiet || git commit -m "Update generated data files"
-          git push
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/4L3M4R/cerbero.git HEAD:main
+
+
+
+          
