--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -3,7 +3,7 @@ name: Run Cerbero Notebook Daily
 # Trigger: daily at 7 AM UTC and manual runs
 on:
   schedule:
-    - cron: '0 7 * * *'  # every day at 07:00 UTC
+    - cron: '30 12 * * *'  # every day at 12:30 UTC (8:30 AM EDT)
   workflow_dispatch:
 
 jobs:
