--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -58,8 +58,8 @@ jobs:
           git config --local user.name "GitHub Actions Bot"
           git add *_datos.txt
           git diff --cached --quiet || git commit -m "Update generated data files"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/4L3M4R/cerbero.git HEAD:main
-
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/4L3M4R/cerbero.git
+          git push origin HEAD:main
 
 
           
