--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -54,22 +54,14 @@ jobs:
       # Step 7: Commit and push updated data files
       - name: Commit and push updated data
         env:
-          GH_PAT: ${{ secrets.GH_PAT2 }}  # make sure your secret is named GH_PAT2
+          GH_PAT2: ${{ secrets.GH_PAT2 }}  # pass the secret to the job environment
         run: |
-          # Configure git
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
       
-          # Ensure the remote uses the PAT for authentication
+          # Make sure remote uses the PAT
           git remote set-url origin https://x-access-token:${GH_PAT2}@github.com/4L3M4R/cerbero.git
       
-          # Stage any new or updated *_datos.txt files
           git add *_datos.txt
-      
-          # Commit if there are changes
           git diff --cached --quiet || git commit -m "Update generated data files"
-      
-          # Push to the main branch
           git push origin HEAD:main
-      
-                
