--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -65,18 +65,19 @@ jobs:
         with:
           persist-credentials: false  # VERY IMPORTANT, disables using the default GITHUB_TOKEN
       
-      - name: Commit and push updated data
+      - name: Commit and push new data files
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
       
-          # Stage all generated data files
+          # Añadir los archivos recién generados
           git add *_datos.txt
       
-          # Commit only if there are changes
-          git diff --cached --quiet || git commit -m "Update generated data files"
+          # Solo hace commit si hay cambios (por si el contenido es igual)
+          git diff --cached --quiet || git commit -m "Add new generated data files"
       
-          # Push using the PAT
+          # Push usando tu token
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/4L3M4R/cerbero.git
           git push origin HEAD:main
+
             
