--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -66,7 +66,7 @@ jobs:
           echo "PWD actual:"
           pwd
           echo "Archivos _datos.txt encontrados:"
-          find . -name '*_datos.txt'
+          find . -name '*'
 
       # Step 7: Commit and push updated data files
       - name: Checkout repository
