--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -1,88 +1,45 @@
-name: Run Cerbero Notebook Daily
+name: Run indrad and save data
 
-# Trigger: daily at 12:30 UTC (8:30 AM EDT) and manual runs
 on:
-  schedule:
-    - cron: '30 12 * * *'
   workflow_dispatch:
+  schedule:
+    - cron: '0 */6 * * *' # cada 6 horas
 
 jobs:
-  run-notebook:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: List repo files to debug paths
-      - name: List repo files
-        run: ls -R
-
-      # Step 3: Set up Python
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.11"
 
-      # Step 4: Install dependencies
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install ta jupyter nltk
-          pip install nbconvert yfinance vaderSentiment transformers torch feedparser
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      # Step 5: Convert notebook to Python script
-      - name: Convert notebook to script
+      - name: Run data generation script
         run: |
-          jupyter nbconvert --to script cerbero.ipynb --output cerbero
-          mv cerbero.txt cerbero.py || true
+          echo "Running data generation script..."
+          python intraday/main.py
+          echo "Files generated:"
+          ls -l *_datos.txt || echo "No *_datos.txt files found"
 
-      # Step 6: Confirm script exists
-      - name: Confirm Python script exists
-        run: ls -l cerbero.py
-
-      # Step 7: Show first 5 lines of script
-      - name: Show first 5 lines
-        run: head -n 5 cerbero.py
-
-      # Step 8: Run the script
-      - name: Run the script
-        run: python cerbero.py
-
-      # Step 9: Backup existing data files (copy, keep originals)
-      - name: Backup existing data files
-        run: |
-          shopt -s nullglob
-          for f in *_datos.txt; do
-              cp "$f" "${f%.txt}_backup_$(date +%Y%m%d%H%M%S).txt"
-          done
-
-      # Step 10: Verify files
-      - name: Verify generated files
-        run: |
-          echo "Current directory:"
-          pwd
-          echo "Generated _datos.txt files:"
-          ls -l *_datos.txt || echo "No _datos.txt files found."
-
-      # Step 11: Checkout repo again without default credentials
-      - name: Checkout repository for commit
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false  # Disable default GITHUB_TOKEN
-
-      # Step 12: Commit and push new data files
-      - name: Commit and push new data files
+      - name: Configure Git user
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "GitHub Actions Bot"
+          git config --local user.name "github-actions[bot]"
 
+      - name: Commit and push generated data
+        run: |
           echo "Generated data files to commit:"
-          ls -l *_datos.txt || echo "No files found"
-
+          ls -l *_datos.txt || echo "No *_datos.txt files found"
+          
           git add *_datos.txt
-          git diff --cached --quiet || git commit -m "Add new generated data files"
-
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/4L3M4R/cerbero.git
+          git commit -m "Auto-update data files [skip ci]" || echo "No changes to commit"
           git push origin HEAD:main
