--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -11,8 +11,11 @@ jobs:
 
     steps:
       # Step 1: Checkout repo
+     
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GH_PAT }}
 
       # Step 2: Setup Python
       - name: Set up Python
