--- a/.github/workflows/run_cerbero.yml
+++ b/.github/workflows/run_cerbero.yml
@@ -1,8 +1,8 @@
 name: Run Cerbero Notebook Daily
 
 on:
-  schedule:
-    - cron: '0 11 * * *'  # 7:00 AM EDT
+  #schedule:
+  # - cron: '0 11 * * *'  # 7:00 AM EDT
   workflow_dispatch:
 
 jobs:
