Add notebook conversion step in workflow
Added step to convert Jupyter notebook to Python script.

--- a/.github/workflows/Cerbero-Postmarket.yml
+++ b/.github/workflows/Cerbero-Postmarket.yml
@@ -25,6 +25,13 @@ jobs:
           pip install --upgrade pip
           pip install ta yfinance jupyter nltk vaderSentiment transformers torch feedparser
 
+
+      - name: Convert notebook to script
+        run: |
+          jupyter nbconvert --to script cerbero-post.ipynb --output cerbero
+          mv cerbero.txt cerbero.py || true
+
+          
       - name: Run postmarket script
         run: python cerbero-post.py
 
